# agent-loom

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: README.md  env.py
alembic/versions/: 20260517_0000_initial_episodes.py
benchmarks/: memory_recall_bench.py  repeat_failure_rate.py
docs/: ARCHITECTURE.md  PAPERS.md  PHASES.md
examples/: hello_harness.py
scripts/: dev_db_down.sh  dev_db_up.sh
src/agent_loom/: __init__.py  cli.py  config.py  llm.py
src/agent_loom/core/: __init__.py  executor.py  generator.py  planner.py  trace.py  types.py  verifier.py
src/agent_loom/examples/: __init__.py  hello_harness.py
src/agent_loom/memory/: __init__.py  embeddings.py  graph.py  hub.py  inspect.py  promotion.py  reflection.py  store.py  store_pg.py
src/agent_loom/prompts/: __init__.py  generator.md  planner.md  verifier.md
src/agent_loom/skills/: __init__.py  spec.py
tests/: conftest.py  test_cross_process_recall.py  test_embeddings.py  test_executor.py  test_executor_reflection.py  test_failure_taxonomy.py  test_forbidden_injection.py  test_generator.py  test_graph.py  test_hub_kg_integration.py  test_llm.py  test_memory_hub.py  test_memory_inspect.py  test_memory_integration.py  test_memory_store.py  test_memory_store_pg.py  test_planner.py  test_promotion.py  test_reflection.py  test_repeat_failure_rate.py  test_trace.py  test_types.py  test_verifier.py
